# primes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_v5.0.0.md  eksportuj_cache_do_csv.py  generuj_cache_pierwszych.py  generuj_grafike_spirali.py  generuj_svg_spirali.py  pobierz_i_dopisz_pierwsze.py  pyproject.toml  requirements.txt  run_tests.py  setup.py  sprawdz_cache_pierwszych.py  test_cache.py  test_ulam_spiral.py  ulam_spiral.py  wykres_gestosci_pierwszych.py
web/: API.md  README.md  api_helpers.py  app.py  requirements-web.txt  test_api.py
web/static/css/: style.css
web/static/js/: app.js  cache-generator.js  csv-exporter.js  density-chart.js  ulam-spiral.js
web/templates/: index.html
