"Source" = "https://github.com/pmichon/primes"

[project.scripts]
ulam-spiral = "ulam_spiral:main"
ulam-grafika = "generuj_grafike_spirali:main"
prime-cache = "generuj_cache_pierwszych:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100